--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-<canvas></canvas>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>2D fighter</title>
+    <link rel="stylesheet" type="text/css" href="index.css" />
+  </head>
+  <body>
+    <canvas></canvas>
+  </body>
+  <script src="./index.js"></script>
+</html>
