--- a/index.html
+++ b/index.html
@@ -7,6 +7,64 @@
     <link rel="stylesheet" type="text/css" href="index.css" />
   </head>
   <body>
+    <div class="healthBar">
+      <div class="healthbarContainer">
+        <div
+          class="playersBar"
+          style="display: flex; justify-content: flex-end"
+        >
+          <div
+            style="
+              position: absolute;
+              background-color: blue;
+              top: 0;
+              bottom: 0;
+              right: 0;
+              width: 100%;
+              border-top-left-radius: 10px;
+              border-bottom-left-radius: 10px;
+            "
+          ></div>
+          <div
+            id="playerBar"
+            style="
+              position: absolute;
+              background-color: yellow;
+              height: 60px;
+              width: 100%;
+              border-top-left-radius: 10px;
+              border-bottom-left-radius: 10px;
+            "
+          ></div>
+        </div>
+        <div class="timerBox">timer</div>
+        <div class="playersBar">
+          <div
+            style="
+              position: absolute;
+              background-color: blue;
+              top: 0;
+              bottom: 0;
+              right: 0;
+              left: 0;
+              border-top-right-radius: 10px;
+              border-bottom-right-radius: 10px;
+            "
+          ></div>
+          <div
+            id="enemyBar"
+            style="
+              position: absolute;
+              background-color: yellow;
+              height: 60px;
+              width: 100%;
+              border-top-right-radius: 10px;
+              border-bottom-right-radius: 10px;
+            "
+          ></div>
+        </div>
+      </div>
+    </div>
     <canvas></canvas>
   </body>
   <script src="./index.js"></script>
