--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             "
           ></div>
         </div>
-        <div class="timerBox">timer</div>
+        <div class="timerBox" id="timer"></div>
         <div class="playersBar">
           <div
             style="
@@ -65,6 +65,7 @@
         </div>
       </div>
     </div>
+    <div class="gameMessage" id="gameMessage"></div>
     <canvas></canvas>
   </body>
   <script src="./index.js"></script>
