update:add script tags

--- a/index.html
+++ b/index.html
@@ -68,5 +68,8 @@
     <div class="gameMessage" id="gameMessage"></div>
     <canvas></canvas>
   </body>
-  <script src="./index.js"></script>
+  <script src="./js/classes.js"></script>
+  <script src="./js/players.js"></script>
+  <script src="./js/utils.js"></script>
+  <script src="./js/index.js"></script>
 </html>
